--- a/views/brand.ejs
+++ b/views/brand.ejs
@@ -144,18 +144,18 @@
 							<footer>
 								<div class="pagination">
 									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
+			<!--						<a href="#" class="page active">1</a>
 									<a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
 									<a href="#" class="page">4</a>
 									<a href="#" class="page">5</a>
 									<a href="#" class="page">6</a>
-									<a href="#" class="page">7</a>
+									<a href="#" class="page">7</a> -->
 										<!-- <span class="extra">&hellip;</span> -->
-									<a href="#" class="page">8</a>
+							<!--		<a href="#" class="page">8</a>
 									<a href="#" class="page">9</a>
 									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
+									<a href="#" class="next">Next</a>-->
 								</div>
 							</footer>
 
