--- a/views/membereditor.ejs
+++ b/views/membereditor.ejs
@@ -19,29 +19,32 @@
                     <div class="profile-image">
                         <img id="changepic" src=<%=item.m_pic %> alt="會員頭貼">
                     </div>
-                    <p>選擇會員照片</p>
-                    <form action="/memberupdate" enctype="multipart/form-data" method="post" name="form">
-                        <input type="file" name="m_pic" onchange="readURL(this)" targetID="changepic" accept="image/gif, image/jpeg, image/png">
-                    </form>
                     <script>
-                        function readURL(input){
-                          if(input.files && input.files[0]){
-                            var imageTagID = input.getAttribute("targetID");
-                            var reader = new FileReader();
-                            reader.onload = function (e) {                        
-                               var img = document.getElementById(imageTagID);                        
-                               img.setAttribute("src", e.target.result)
+                        function readURL(input) {
+                            if (input.files && input.files[0]) {
+                                var imageTagID = input.getAttribute("targetID");
+                                var reader = new FileReader();
+                                reader.onload = function (e) {
+                                    var img = document.getElementById(imageTagID);
+                                    img.setAttribute("src", e.target.result)
+                                }
+                                reader.readAsDataURL(input.files[0]);
                             }
-                            reader.readAsDataURL(input.files[0]);
-                          }
                         }
-                        </script>
+                    </script>
                 </div> <!-- top-section -->
             </div> <!-- .sidebar-menu -->
             <div class="main">
                 <div class="col-lg-10 mx-auto py-5">
                     <h4>會員資料修改頁面</h4>
-                    <form action="/memberupdate" method="post">
+                    <form action="/memberupdate" enctype="multipart/form-data" method="post" name="form" onchange="readURL(this)" targetID="changepic">
+                        <table>
+                            </select> </td>
+                            <td>
+                                <p>選擇會員照片</p>
+                                <input type="file" name="m_pic" accept="image/gif, image/jpeg, image/png">
+                            </td>
+                        </table>
                         <table>
                             </select> </td>
                             <td>
