--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -12,3 +12,21 @@ body {
     color: #FA8072;
     font-weight: bold;
 }
+
+.profile-image {
+    width: 150px;
+    height: 150px;
+    border: 4px solid rgb(0, 0, 0);
+    -webkit-border-radius: 75px;
+    border-radius: 75px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    margin-bottom: 20px;
+  }
+  
+  .profile-image img {
+    width: 150%;
+    position: relative;
+  }
