--- a/public/css/membereditor.css
+++ b/public/css/membereditor.css
@@ -25,21 +25,23 @@ body {
   .top-section {
     padding: 40px;
   }
-.profile-image {
+  .profile-image {
     width: 150px;
     height: 150px;
-    border: 4px solid white;
+    border: 4px solid black;
     -webkit-border-radius: 75px;
     border-radius: 75px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     overflow: hidden;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    margin-right: 10px;
   }
+  
   .profile-image img {
-    position: relative;
     width: 150%;
-    background-position: center center;
-    background-size: cover;
-    
+    position: relative;
   }
   
 .main{
