--- a/public/css/templatemo-style.css
+++ b/public/css/templatemo-style.css
@@ -294,18 +294,19 @@ hr {
 .profile-image {
   width: 150px;
   height: 150px;
-  border: 4px solid white;
+  border: 4px solid rgb(255, 255, 255);
   -webkit-border-radius: 75px;
   border-radius: 75px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   overflow: hidden;
   margin-bottom: 20px;
 }
+
 .profile-image img {
-  position: relative;
   width: 150%;
-  background-position: center center;
-  background-size: cover;
-  
+  position: relative;
 }
 
 h3.profile-title {
