--- a/views/register.ejs
+++ b/views/register.ejs
@@ -79,8 +79,11 @@ shrink-to-fit=no"
 <p></p>
 <h1> <span class="badge bg-secondary">註冊系統</span></h1>
   <form action="/newregister" enctype="multipart/form-data" method="post" name="form">
+    <div class="profile-image">
+      <img id="uploadpic" src="#">
+  </div>
     <p>選擇會員照片</p>
-    <input type="file" name="m_pic" accept="image/gif, image/jpeg, image/png">
+    <input type="file" name="m_pic"  onchange="readURL(this)" targetID="uploadpic" accept="image/gif, image/jpeg, image/png">
     <p></p>
     *暱稱: <input type="text" name="m_nickname" required>
     <p></p>
@@ -99,7 +102,19 @@ shrink-to-fit=no"
     <p></p>
     <input type="submit" value="確認登記">
   </form>
-
+  <script>
+    function readURL(input){
+      if(input.files && input.files[0]){
+        var imageTagID = input.getAttribute("targetID");
+        var reader = new FileReader();
+        reader.onload = function (e) {                        
+           var img = document.getElementById(imageTagID);                        
+           img.setAttribute("src", e.target.result)
+        }
+        reader.readAsDataURL(input.files[0]);
+      }
+    }
+  </script>
     <!--   <form class="row align-items-end">
           <div class="col-9">
             <label for="inlineFormInputNum">聯絡資訊(手機與姓名)：</label>
