--- a/views/billboard.ejs
+++ b/views/billboard.ejs
@@ -5,6 +5,7 @@
         div for each item of news, displaying the date and an anchor link referencing detailed information
 -->
 <link rel="stylesheet" href="css/billboard.css">
+<link rel="manifest" href="manifest.json">
 <script src="js/billboard.js"> </script>
 <div class="board">
     <h1 class="board__heading">
