--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -9,6 +9,7 @@ shrink-to-fit=no" />
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
   <link rel="stylesheet" type="text/css" href="css/detail.css" />
+  <link rel="manifest" href="manifest.json">
   <title>領養人登記</title>
 </head>
 
