--- a/views/donate.ejs
+++ b/views/donate.ejs
@@ -11,6 +11,7 @@ shrink-to-fit=no"
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="css/detail.css" />
+    <link rel="manifest" href="manifest.json">
     <title>產品細節</title>
   </head>
 
