--- a/views/membereditor.ejs
+++ b/views/membereditor.ejs
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/membereditor.css">
+    <link rel="manifest" href="manifest.json">
     <title>會員修改頁面</title>
 </head>
 
