--- a/views/product.ejs
+++ b/views/product.ejs
@@ -7,6 +7,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="css/product.css" />
+    <link rel="manifest" href="manifest.json">
     <title>實驗動物認養</title>
   </head>
 
