--- a/views/register.ejs
+++ b/views/register.ejs
@@ -18,6 +18,7 @@ shrink-to-fit=no"
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
   <link rel="stylesheet" type="text/css" href="css/detail.css" />
+  <link rel="manifest" href="manifest.json">
   <title>Bunny幫你會員註冊系統</title>
 </head>
 
