--- a/views/about.ejs
+++ b/views/about.ejs
@@ -8,6 +8,7 @@
     />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="css/about.css" />
+    <link rel="manifest" href="manifest.json">
     <title>關於我們</title>
   </head>
 
