--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,131 +2,137 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
-    <title>Bunny幫你</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="css/index.css">
+  <link rel="manifest" href="manifest.json">
+  <!-- Apple Safari -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="WebApp - First App">
+  <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="57x57">
+  <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="60x60">
+  <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="72x72">
+  <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="76x76">
+  <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="114x114">
+  <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="120x120">
+  <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="144x144">
+  <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="152x152">
+  <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="167x167">
+  <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="180x180">
+</head>
+<title>Bunny幫你</title>
 
 
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1"
-    />
+<!-- Required meta tags -->
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
-    <title>Bunny幫你</title>
+<!-- Bootstrap CSS -->
+<link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+<link rel="stylesheet" type="text/css" href="css/index.css" />
+<title>Bunny幫你</title>
 
 
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-light bg-light ps-4">
-            <span class="navbar-brand mb-0 h1">邦妮幫你v0.01</span>
-        </nav>
-    </header>
-    <div id="banner">
-        <div class="row g-0 text-light justify-content-center align-items-center">
-            <div class="col-lg-6 text-center">
-               <!----<h1>邦妮幫你Bunny</h1>---->
-                <p>牠，也有感受。</p>
-                  <!--<a href="pages/learn.ejs" class="btn btn-danger">瞭解更多</a>-->
-            </div>
-        </div>
+  <header>
+    <nav class="navbar navbar-light bg-light ps-4">
+      <span class="navbar-brand mb-0 h1">邦妮幫你v0.01</span>
+    </nav>
+  </header>
+  <div id="banner">
+    <div class="row g-0 text-light justify-content-center align-items-center">
+      <div class="col-lg-6 text-center">
+        <!----<h1>邦妮幫你Bunny</h1>---->
+        <p>牠，也有感受。</p>
+        <!--<a href="pages/learn.ejs" class="btn btn-danger">瞭解更多</a>-->
+      </div>
     </div>
-    <div id="content" class="container-fluid">
-        <div class="row text-center">
-            <div class="col-lg py-5">
-                <h4>會員登入</h4>
-                <p class="text-light">Bunny幫你</p>
-                <a class="btn btn-outline-light" href="memberpage" role="button">登入系統</a>
-             </div>
-            <div class="col-lg py-5">
-                <h4>零殘忍掃描功能</h4>
-                <p class="text-light">智能辨識品牌</p>
-                <a class="btn btn-outline-light" href="recognition" role="button">開啟手機鏡頭</a>
-            </div> 
-            <div class="w-100"></div>
-            <div class="col-lg py-5">
-                <h4>實驗動物認養</h4>
-                <p class="text-light">領養代替購買!</p>
-                <a class="btn btn-outline-light" href="detail" role="button">我要領養</a>
-            </div>
-            <div class="col-lg py-5">
-                <h4>訊息公告</h4>
-                <p class="text-light"></p>
-                <a class="btn btn-outline-light" href="news" role="button">了解更多</a>
-            </div>
-        </div>
+  </div>
+  <div id="content" class="container-fluid">
+    <div class="row text-center">
+      <div class="col-lg py-5">
+        <h4>會員登入</h4>
+        <p class="text-light">Bunny幫你</p>
+        <a class="btn btn-outline-light" href="memberpage" role="button">登入系統</a>
+      </div>
+      <div class="col-lg py-5">
+        <h4>零殘忍掃描功能</h4>
+        <p class="text-light">智能辨識品牌</p>
+        <a class="btn btn-outline-light" href="recognition" role="button">開啟手機鏡頭</a>
+      </div>
+      <div class="w-100"></div>
+      <div class="col-lg py-5">
+        <h4>實驗動物認養</h4>
+        <p class="text-light">領養代替購買!</p>
+        <a class="btn btn-outline-light" href="detail" role="button">我要領養</a>
+      </div>
+      <div class="col-lg py-5">
+        <h4>訊息公告</h4>
+        <p class="text-light"></p>
+        <a class="btn btn-outline-light" href="news" role="button">了解更多</a>
+      </div>
     </div>
-    <!--///// -->
-    <div id="content" class="container-fluid">
-        <div class="row text-center">
-            <div class="col-lg py-5">
-                <h4>動物友善店家</h4>
-                <p class="text-light">邦妮幫你精選品牌</p>
-                <a class="btn btn-outline-light" href="brand" role="button">查看名單</a>
-            </div>
-      
-        </div>
+  </div>
+  <!--///// -->
+  <div id="content" class="container-fluid">
+    <div class="row text-center">
+      <div class="col-lg py-5">
+        <h4>動物友善店家</h4>
+        <p class="text-light">邦妮幫你精選品牌</p>
+        <a class="btn btn-outline-light" href="brand" role="button">查看名單</a>
+      </div>
+
     </div>
-    <!--///// -->
-    <footer class="text-center bg-dark text-white py-2">
-      Copyrights © 2022 All Rights Reserved by Bunny幫你
-    </footer>
-    <!-- Optional JavaScript -->
-    <script src="js/bootstrap.js"></script>
+  </div>
+  <!--///// -->
+  <footer class="text-center bg-dark text-white py-2">
+    Copyrights © 2022 All Rights Reserved by Bunny幫你
+  </footer>
+  <!-- Optional JavaScript -->
+  <script src="js/bootstrap.js"></script>
 
 
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-          <div class="container">
-            <a class="navbar-brand" href="/">Bunny幫你</a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarNav"
-              aria-controls="navbarNav"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/">首頁</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about">關於我們</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="product">實驗動物認養</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-        <!--  <div class="row g-0 justify-content-center align-items-center text">
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="/">Bunny幫你</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/">首頁</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about">關於我們</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="product">實驗動物認養</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!--  <div class="row g-0 justify-content-center align-items-center text">
           <div class="col-lg-5 text-center text-white p-2">
             <h1> 測試文字</h1>
             <p> 測試文字測試文字。<br> 測試文字，測試文字。</p>
         </div> -->
-      </header>
-      <!-- Optional JavaScript -->
-      <script src="js/bootstrap.js"></script>
+  </header>
+  <!-- Optional JavaScript -->
+  <script src="js/bootstrap.js"></script>
 
 
 
-    
+
 </body>
 
 </html>
