--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>登入系統</title>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
