--- a/views/memberpage.ejs
+++ b/views/memberpage.ejs
@@ -17,6 +17,7 @@
         <link rel="stylesheet" href="css/font-awesome.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/templatemo-style.css">
+        <link rel="manifest" href="manifest.json">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
