--- a/views/news.ejs
+++ b/views/news.ejs
@@ -8,6 +8,7 @@
     />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="css/about.css" />
+    <link rel="manifest" href="manifest.json">
     <title>訊息公告</title>
   </head>
 
