--- a/views/unAuth.ejs
+++ b/views/unAuth.ejs
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="manifest" href="manifest.json">
     <title>Bunny幫你</title>
 
 
