--- a/views/recognition.ejs
+++ b/views/recognition.ejs
@@ -7,6 +7,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="css/recognition.css" />
+    <link rel="manifest" href="manifest.json">
     <title>圖像辨識</title>
   </head>
 
