--- a/views/news.ejs
+++ b/views/news.ejs
@@ -17,28 +17,21 @@
       <h3 class="title mt-3">活動資訊<small></small></h3>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="index.html">Bunny幫你</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+          <a class="navbar-brand" href="/">Bunny幫你</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="首頁">首頁</a>
+                <a class="nav-link active" aria-current="page" href="index">首頁</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="about.html">訊息公告</a>
+                <a class="nav-link" href="about">關於我們</a>
               </li>
               <li class="nav-item">
-<!--                <a class="nav-link" href="product.html">實驗動物認養</a>-->
+                <a class="nav-link" href="product">實驗動物認養</a>
               </li>
             </ul>
           </div>
