--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,7 +64,7 @@
       <div class="col-lg py-5">
         <h4>零殘忍掃描功能</h4>
         <p class="text-light">智能辨識品牌</p>
-        <a class="btn btn-outline-light" href="recognition" role="button">開啟手機鏡頭</a>
+        <a class="btn btn-outline-light" href="recognition" role="button">上傳圖片</a>
       </div>
       <div class="w-100"></div>
       <div class="col-lg py-5">
