會員信箱修改(readonly)

--- a/views/membereditor.ejs
+++ b/views/membereditor.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/membereditor.css">
     <link rel="manifest" href="manifest.json">
-    <title>會員修改頁面</title>
+    <title>會員資料修改頁面</title>
 </head>
 
 <body>
@@ -46,7 +46,7 @@
                         <table>
                             </select> </td>
                             <td>
-                                <p>*信箱:<br /><input type="text" name="m_email" required value=<%=item.m_email %> ></p>
+                                <p>*信箱:<br /><input type="text" name="m_email" readonly value=<%=item.m_email %> ></p>
                             </td>
                         </table>
 
