--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,7 +59,7 @@
       <div class="col-lg py-5">
         <h4>會員登入</h4>
         <p class="text-light">Bunny幫你</p>
-        <a class="btn btn-outline-light" href="memberpage" role="button">登入系統</a>
+        <a class="btn btn-outline-light" href="memberpage" role="button">查看會員</a>
       </div>
       <div class="col-lg py-5">
         <h4>零殘忍掃描功能</h4>
@@ -115,7 +115,7 @@
               <a class="nav-link" href="about">關於我們</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="product">實驗動物認養</a>
+              <a class="nav-link" href="detail">實驗動物認養</a>
             </li>
           </ul>
         </div>
