管理者登入頁面跳轉

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,14 +22,14 @@
                 <div class="form-group">
                     <input class="form-control" placeholder="Password" name="m_password" type="text">
                 </div>
-                <div class="checkbox">
+                <!--<div class="checkbox">
                     <label>
                         <input name="remember" type="checkbox">記住我
                     </label>
-                </div>
+                </div>-->
                 <div><input type="submit" class="btn" value="登入"></div>
             </div>
-            <button type="submit" class="btn">  <a href="register"> 註冊</a></button> 
+            <button type="button" class="btn" onclick="location.href='register'">註冊</button> 
                 
                    
             </form>
