前台網頁更新

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -102,8 +102,15 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
         <a class="navbar-brand" href="/">Bunny幫你</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button 
+        class="navbar-toggler" 
+        type="button" 
+        data-bs-toggle="collapse" 
+        data-bs-target="#navbarNav"
+          aria-controls="navbarNav" 
+          aria-expanded="false" 
+          aria-label="Toggle navigation"
+          >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -127,8 +134,8 @@
             <p> 測試文字測試文字。<br> 測試文字，測試文字。</p>
         </div> -->
   </header>
-  <!-- Optional JavaScript -->
-  <script src="js/bootstrap.js"></script>
+  <!-- Optional JavaScript 
+  <script src="js/bootstrap.js"></script> 導致導覽列關不起來-->
 
 
 
