--- a/views/memberpage.ejs
+++ b/views/memberpage.ejs
@@ -27,7 +27,7 @@
     
         <div class="responsive-header visible-xs visible-sm">
             <div class="container">
-                <!----<div class="row">
+                <div class="row">
                     <div class="col-md-12">
                         <div class="top-section">
                             <div class="profile-image">
@@ -45,7 +45,7 @@
                             </div>
                         </div>
                     </div>
-                </div>--->
+                </div>
                 <a href="#" class="toggle-menu"><i class="fa fa-bars"></i></a>
                 <div class="main-navigation responsive-menu">
                     <ul class="navigation">
@@ -62,6 +62,8 @@
                 </div>
             </div>
         </div>
+
+<!--AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA-->
 
         <!-- SIDEBAR -->
         <div class="sidebar-menu hidden-xs hidden-sm">
