--- a/views/membereditor.ejs
+++ b/views/membereditor.ejs
@@ -13,14 +13,14 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+ <!--   <div class="container-fluid">
         <div class="row">
             <div class="sidebar-menu hidden-xs hidden-sm">
-                <div class="top-section">
+                <div class="top-section">-->
                 </div> <!-- top-section -->
             </div> <!-- .sidebar-menu -->
-            <div class="main">
-                <div class="col-lg-10 mx-auto py-5">
+         <!--   <div class="main">-->
+                <!--<div class="col-lg-5 mx-auto py-5">-->
                     <h4>會員資料修改頁面</h4>
                     <form action="/memberupdate" enctype="multipart/form-data" method="post" name="form" onchange="readURL(this)" targetID="changepic">
                         <table>
@@ -125,7 +125,7 @@
                     </div>-->
 
                     <!--<div class="row">-->
-                    <div class="col-sm my-2">
+                 <div class="col-sm my-2">
                         <img src="images/01-banner.jpg" class="img-fluid">
                     </div>
                     <div class="col-sm my-2">
